--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,11 +1,13 @@
 nav{
     height: 10vh;
     background: transparent;
+   
 }
 
 
-.flex-container{
+.flex-nav-container{
     display: flex;
+    
 }
 
 .nav-links{
@@ -22,15 +24,19 @@ nav{
     z-index: 4;
 }
 
-
 .nav-links li a{
     color: #FFF;
     text-decoration: none;
     font-size: 16px;
-    font-weight: 600;
+    
 }
 
-@media screen and (max-width:768px){
+@media screen and (max-width:767px){
+
+    
+    .flex-nav-container{
+        padding: 0  !important
+    }
 
     .line{
         width: 30px;
@@ -52,6 +58,7 @@ nav{
     }
 
     .nav-links{
+        padding-top: 30px;
         position: fixed;
         background-color: #1a1a1a;
         height: 100vh;
