Adding complete home , with other pages background

--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,16 @@ body{
     background-color: #1a1a1a;
     font-family: 'Roboto', sans-serif;
 }
+
+
+.black-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    height: 100%;
+    width: 100%;
+    background: linear-gradient( 0deg , rgba(0,0,0,1) 0%, rgba(0,0,0,0) 77%, rgba(248,231,166,0) 100%);
+    opacity: 0.8;
+  }
+
