--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,9 @@
 
 
 body{
-    background-color: #1a1a1a;
+    background-color:   rgb(15, 15, 15);
+  
+   
     font-family: 'Roboto', sans-serif;
 }
 
