--- a/src/components/pages/Pages.css
+++ b/src/components/pages/Pages.css
@@ -3,7 +3,7 @@
     position: absolute;
     padding-top: 10vh;
     width: 100%;
-    height: 75vh;
+    height: 80vh;
 }
 
 
@@ -13,8 +13,8 @@
   
 }
 
-.slide-title h1{
-    font-size: 5rem;
+.slide-title h2{
+    font-size: 4rem;
     color: #FFF;
     text-align: left;
 }
@@ -39,7 +39,17 @@
     background: rgba(255, 255, 255, 0.13); 
     backdrop-filter: blur(8px); 
     -webkit-backdrop-filter: blur(8px);
+}
 
+.blur-right{
+  top: 0;
+  position: absolute;
+  width: 50%;
+  background: rgba(255, 255, 255, 0.13);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  height: 100%;
+  right: 0;
 }
 
 .next-slide-icon{
@@ -50,10 +60,12 @@
 }
 
 
-.container-fix{
-  width: 99%;
+.adjust-bottom-slide{
+  padding-top: 6em;
+  width: 100%;
 }
 
+/*
 .bottom-slide{
     position: relative;
     background: rgba(255, 255, 255, 0.13); 
@@ -61,6 +73,8 @@
     -webkit-backdrop-filter: blur(8px);
     width: 100%;
 }
+*/
+
 
 .left-side-text{
     margin: 30px 0;
@@ -199,3 +213,6 @@
   
 
   
+  .clear{
+    clear: both;
+  }
