--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -60,7 +60,7 @@ nav{
     .nav-links{
         padding-top: 30px;
         position: fixed;
-        background-color: #1a1a1a;
+        background-color: #0f0f0f;
         height: 100vh;
         width: 100%;
         flex-direction: column;
@@ -111,4 +111,9 @@ nav{
 .active{
     border-bottom: 2px solid #FFF;
     padding: 10px;
+}
+
+.darkness-nav{
+    background-color: #0f0f0f;
+    transition: 0.5s ease-in;
 }
