Hotel Canada 1.0 stable --dimmy data

--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -1,4 +1,8 @@
 
+.about-bg{
+    background-color: rgb(24 24 24) !important;
+    padding-bottom: 30px;
+}
 .about h3 {
     color: #fff;
     text-align: center;
